# rosjava_standalone_maven_example

./: .gitignore  .project  generate_java_msgs.sh  rename_project.sh
rosjava-standalone-catkin-workspace/src/rosjava_standalone_msgs/: CMakeLists.txt  package.xml
rosjava-standalone-catkin-workspace/src/rosjava_standalone_msgs/msg/: MyMessage.msg
rosjava-standalone-catkin-workspace/src/rosjava_standalone_msgs/srv/: MyService.srv
rosjava-standalone-parent/: .project  pom.xml
rosjava-standalone-parent/local-maven-repo/org/ros/rosjava_messages/rosjava_standalone_msgs/: maven-metadata-remote.xml  maven-metadata-remote.xml.sha1
rosjava-standalone-parent/local-maven-repo/org/ros/rosjava_messages/rosjava_standalone_msgs/0.0.0/: rosjava_standalone_msgs-0.0.0.pom
rosjava-standalone-parent/src/main/java/com/github/wmlynar/rosjava_standalone/generated_messages/: Listener.java  MainWithCore.java  MainWithoutCore.java  Talker.java
rosjava-standalone-parent/src/main/java/org/ros/rosjava_tutorial_pubsub/: Listener.java  PubSubExampleWithCore.java  Talker.java
rosjava-standalone-parent/src/main/java/org/ros/rosjava_tutorial_services/: Client.java  Server.java  SlientServerExampleWithoutCore.java
