<?xml version="1.0"?>
<package>
  <name>rosjava_standalone_msgs</name>
  <version>0.0.0</version>
  <description>The rosjava_standalone_msgs package</description>
  <maintainer email="woj@todo.todo">woj</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
